Eliminar __pycache__ y agregar al .gitignore

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <title>Instituto Tecnológico de Puebla</title>
     <title>{% block title %}Calendario de Eventos{% endblock %}</title>
     <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar/index.global.min.js"></script>
