Eliminados __pycache__ y actualizado .gitignore

--- a/app/templates/admin_index.html
+++ b/app/templates/admin_index.html
@@ -3,7 +3,8 @@
 {% block title %}Calendario - Administrador{% endblock %}
 
 {% block content %}
-<h1>Calendario de Eventos</h1>
+    <h1>Instituto Tecnológico de Puebla</h1>
+    <h1>Calendario de Eventos</h1>
 
 <div class="top-bar" style="justify-content: space-between;">
     <a href="{{ url_for('eventos.verificar_admin') }}" class="admin-panel-link" style="background-color:#17a2b8; padding: 10px 20px; border-radius: 5px; color: white; text-decoration: none;">
