--- a/app/templates/index_users.html
+++ b/app/templates/index_users.html
@@ -3,6 +3,7 @@
 {% block title %}Calendario - Usuario{% endblock %}
 
 {% block content %}
+    <h1>Instituto Tecnológico de Puebla</h1>
     <h1>Calendario de Eventos</h1>
 
     <div class="top-bar">
