--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,6 +25,8 @@
             h1 {
                 text-align: center;
                 margin-bottom: 30px;
+                font-size: 25px;
+                margin: 5px 0;
             }
 
             .top-bar {
